Closed
Bug 100729
Opened 24 years ago
Closed 19 years ago
context popup checkbox menuitem command not checked
Categories
(Core :: XUL, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: neil, Assigned: neil)
Details
Attachments
(2 files, 1 obsolete file)
|
980 bytes,
application/vnd.mozilla.xul+xml
|
Details | |
|
7.52 KB,
patch
|
bzbarsky
:
review+
bzbarsky
:
superreview+
|
Details | Diff | Splinter Review |
Using Build ID: 2001091903
Steps to reproduce problem
1. Load attachment
2 [details] [diff] [review]. Notice that the two checkboxes observe the command nodes
3. Drop down the combobox and notice that the menuitems observe the command nodes
4. Open the context menu and notice that the first menuitem isn't checked.
Expected results: all elements observe label and checked
Actual results: the first context menuitem only observes the label
| Assignee | ||
Comment 1•24 years ago
|
||
Updated•24 years ago
|
Status: NEW → ASSIGNED
Target Milestone: --- → mozilla0.9.6
Updated•24 years ago
|
Target Milestone: mozilla0.9.6 → mozilla0.9.7
Comment 2•24 years ago
|
||
Is this affecting any real product, or is it just a 1.0 correctness issue? ->0.9.9
Comment 3•24 years ago
|
||
works for me now.
Comment 4•24 years ago
|
||
works for me now.
Status: ASSIGNED → RESOLVED
Closed: 24 years ago
Resolution: --- → WORKSFORME
| Assignee | ||
Comment 5•24 years ago
|
||
I originally filed this investigating a question by mpt as to whether the View >
Show/Hide menu could be duplicated as the toolbar/status bar context menu.
Unless this bug is fixed [NOT fixed in 2001113003, Blake] the answer is no.
| Assignee | ||
Comment 6•23 years ago
|
||
Still not working in build 2001120504.
Status: RESOLVED → REOPENED
Resolution: WORKSFORME → ---
Updated•23 years ago
|
Target Milestone: mozilla0.9.7 → mozilla0.9.9
Updated•23 years ago
|
Status: REOPENED → ASSIGNED
Target Milestone: mozilla0.9.9 → mozilla1.2
Comment 7•23 years ago
|
||
--> default owner
Assignee: hyatt → jaggernaut
Status: ASSIGNED → NEW
Target Milestone: mozilla1.2alpha → ---
| Assignee | ||
Comment 8•19 years ago
|
||
Assignee: jag → neil.parkwaycc.co.uk
Status: NEW → ASSIGNED
Attachment #209767 -
Flags: superreview?(bzbarsky)
Attachment #209767 -
Flags: review?(bzbarsky)
Comment 9•19 years ago
|
||
Comment on attachment 209767 [details] [diff] [review]
Copy/Paste
Take out the extra GetAttr of menuValue and the equals check against it -- SetAttr already does exactly such a check.
Also, do we really want to test for IsEmpty()? Or should we copy over a checked attr that's explicitly set to ""?
r+sr=bzbarsky with the first thing fixed in both chunks of code and the second thing either way.
Attachment #209767 -
Flags: superreview?(bzbarsky)
Attachment #209767 -
Flags: superreview+
Attachment #209767 -
Flags: review?(bzbarsky)
Attachment #209767 -
Flags: review+
| Assignee | ||
Comment 10•19 years ago
|
||
Attachment #209767 -
Attachment is obsolete: true
Attachment #209899 -
Flags: superreview?(bzbarsky)
Attachment #209899 -
Flags: review?(bzbarsky)
Updated•19 years ago
|
Attachment #209899 -
Flags: superreview?(bzbarsky)
Attachment #209899 -
Flags: superreview+
Attachment #209899 -
Flags: review?(bzbarsky)
Attachment #209899 -
Flags: review+
| Assignee | ||
Comment 11•19 years ago
|
||
Fix checked in some time ago but I needed to restart my browser :-/
Status: ASSIGNED → RESOLVED
Closed: 24 years ago → 19 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•