Bug 100729 Sync <command> checkbox attribute with <menuitem>s in a context menu as well as in a menu bar and clean up the synchronizing code r+sr=bz